--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^9.1.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sass-embedded": "^1.86.1"
   }
 }
