--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "cd client && npm run preview"
   },
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "json-stringify-pretty-compact": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
