--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "json-stringify-pretty-compact": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
