--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,4 +11,4 @@ COPY --from=build /dist usr/share/nginx/html
 COPY --from=build nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
 
-CMD ["nginx", "-g", "deamon off;"]
+CMD ["nginx", "-g", "daemon off;"]
