--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
-      - './nginx.conf:/etc/nginx/nginx.conf'
+      - './nginx.conf:/etc/nginx/conf.d/default.conf'
     depends_on:
       - frontend
     networks:
