--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "preview": "cd client && npm run preview"
   },
   "dependencies": {
-    "concurrently": "^9.1.2",
-    "json-stringify-pretty-compact": "^4.0.0"
+    "concurrently": "^9.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
